# mcpguard

./: .gitignore  .pre-commit-hooks.yaml  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: launch-posts.md  screenshot-gen.html
src/mcpguard/: __init__.py  cli.py  discovery.py  engine.py  fixer.py  inspector.py  models.py  printer.py  verifier.py
src/mcpguard/rules/: mcp01_secrets.yaml  mcp02_permissions.yaml  mcp03_poisoning.yaml  mcp04_supply_chain.yaml  mcp05_injection.yaml  mcp06_intent.yaml  mcp07_auth.yaml  mcp08_audit.yaml  mcp09_shadow.yaml  mcp10_context.yaml
tests/: conftest.py  test_discovery.py  test_engine.py  test_fixer.py  test_inspector.py  test_output.py
